--- a/_variables.scss
+++ b/_variables.scss
@@ -1,7 +1,7 @@
-$colorfondo: rgba(202, 119, 235);
+$colorfondo: rgb(239, 182, 200);
 $colorfondo1: rgb(170, 104, 196);
-$colorbarra: rgb(93, 16, 165);
+$colorbarra:rgb(103, 65, 136);
 $colorbarrahover:rgba(160, 16, 165, 0.678);
 $colorfondo2: white;
 $fuenteprincipal:sans-serif;
-$colorfondobody: linear-gradient(90deg, rgba(202, 119, 235) 0%, rgba(255,255,255) 8%, rgba(255,255,255) 92%, rgba(202, 119, 235) 100%);
+$colorfondobody: linear-gradient(90deg,  rgb(239, 182, 200, 0.6) 0%, rgba(255,255,255) 8%, rgba(255,255,255) 92%,  rgb(239, 182, 200, 0.6) 100%);
