--- a/_precios.scss
+++ b/_precios.scss
@@ -23,9 +23,11 @@ td
     width: 300px;
     font-size: 16px;
     text-align: center;
+    padding: 10px;
 }
 
 tr
 {
     border: $colorbarra solid;
+    
 }
