--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 h2 {
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
   font-family: sans-serif;
   font-weight: bolder;
   font-size: 35px;
@@ -36,9 +36,9 @@ h2 {
 }
 
 .imgmarcas {
-  height: 80%;
-  width: 80%;
-  border: rgb(103, 65, 136) solid 1, 5px;
+  height: 60%;
+  width: 60%;
+  border: rgb(107, 42, 163) solid 1, 5px;
 }
 
 .imgmarcas:hover {
@@ -53,9 +53,9 @@ h2 {
 }
 
 .imgpagos {
-  width: 80%;
+  width: 85%;
   height: auto;
-  padding: 10px 0 30px 0;
+  padding: 10px 0 25px 0;
   margin-top: 15px;
 }
 
@@ -93,7 +93,7 @@ h2 {
   grid-area: gfooter;
   padding: 5px;
   background-color: rgb(239, 182, 200);
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
   font-size: 15px;
   font-style: italic;
   font-family: sans-serif;
@@ -108,7 +108,7 @@ h2 {
 .gmsj {
   width: 85%;
   height: 6%;
-  border: rgb(103, 65, 136) 2px solid;
+  border: rgb(107, 42, 163) 2px solid;
   font-family: sans-serif;
   font-style: italic;
   font-size: 20px;
@@ -118,7 +118,7 @@ h2 {
 .gmsj1 {
   width: 85%;
   height: 50%;
-  border: rgb(103, 65, 136) 2px solid;
+  border: rgb(107, 42, 163) 2px solid;
   font-family: sans-serif;
   font-style: italic;
   font-size: 20px;
@@ -126,7 +126,7 @@ h2 {
 }
 
 .gboton {
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
   background-color: rgba(137, 43, 226, 0.199);
   border-radius: 5px;
   font-size: 20px;
@@ -134,12 +134,12 @@ h2 {
 }
 
 .gtablacontacto {
-  border: rgb(103, 65, 136) 2px solid;
+  border: rgb(107, 42, 163) 2px solid;
   border-radius: 10px;
   width: 70%;
   height: 70%;
   background-color: white;
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
   font-family: sans-serif;
   padding-left: 5%;
   padding-right: 5%;
@@ -152,6 +152,7 @@ h2 {
   text-align: left;
   font-weight: bolder;
   font-size: 22px;
+  padding: 0px;
 }
 
 .gcontacto {
@@ -159,15 +160,16 @@ h2 {
   text-align: right;
   font-style: italic;
   font-size: 18px;
+  padding: 0px;
 }
 
 .gacontacto {
   text-decoration: none;
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
 }
 
 .gmapa {
-  border: rgb(103, 65, 136) 2px solid;
+  border: rgb(107, 42, 163) 2px solid;
   margin-left: 10%;
   width: 70%;
   height: 80%;
@@ -178,7 +180,7 @@ h2 {
   border-collapse: separate;
   border-spacing: 10px 0px;
   font-size: 18px;
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
   font-family: sans-serif;
   margin-left: auto;
   margin-right: auto;
@@ -195,10 +197,11 @@ td {
   width: 300px;
   font-size: 16px;
   text-align: center;
+  padding: 10px;
 }
 
 tr {
-  border: rgb(103, 65, 136) solid;
+  border: rgb(107, 42, 163) solid;
 }
 
 /**header FLEXBOX INDEX**/
@@ -288,7 +291,7 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   font-size: 22px;
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
   font-family: sans-serif;
 }
 
@@ -304,7 +307,7 @@ a:hover {
 }
 
 .barrabusqueda {
-  border: rgb(103, 65, 136) hidden;
+  border: rgb(107, 42, 163) hidden;
   border-radius: 20px 20px 20px 20px;
   font-family: sans-serif;
   background-color: white;
@@ -316,7 +319,7 @@ a:hover {
 footer {
   padding: 5px;
   background-color: rgb(239, 182, 200);
-  color: rgb(103, 65, 136);
+  color: rgb(107, 42, 163);
   font-size: 15px;
   font-style: italic;
   font-family: sans-serif;
@@ -382,7 +385,7 @@ footer {
     margin-right: 10%;
   }
   nav ul li a {
-    font-size: 15px;
+    font-size: 16px;
     text-align: right;
     margin: 0px;
   }
@@ -399,7 +402,7 @@ footer {
     text-align: left;
   }
   h2 {
-    font-size: 25px;
+    font-size: 20px;
     padding: 10px;
   }
   .imgofertas {
@@ -445,7 +448,7 @@ footer {
   .gmsj {
     width: 70%;
     height: 6%;
-    border: rgb(103, 65, 136) 2px solid;
+    border: rgb(107, 42, 163) 2px solid;
     font-family: sans-serif;
     font-style: italic;
     font-size: 16px;
@@ -454,30 +457,30 @@ footer {
   .gmsj1 {
     width: 70%;
     height: 150px;
-    border: rgb(103, 65, 136) 2px solid;
+    border: rgb(107, 42, 163) 2px solid;
     font-family: sans-serif;
     font-style: italic;
     font-size: 16px;
     border-radius: 10px;
   }
   .gboton {
-    color: rgb(103, 65, 136);
+    color: rgb(107, 42, 163);
     background-color: rgba(137, 43, 226, 0.329);
     border-radius: 5px;
     font-size: 14px;
     width: 75px;
   }
   .gtablacontacto {
-    border: rgb(103, 65, 136) 2px solid;
+    border: rgb(107, 42, 163) 2px solid;
     border-radius: 10px;
     width: 70%;
     height: 50%;
     background-color: white;
-    color: rgb(103, 65, 136);
+    color: rgb(107, 42, 163);
     font-family: sans-serif;
     padding: 5px;
     margin: 0 auto;
-    margin-top: 10px;
+    margin-top: 5px;
   }
   .gtipocontacto {
     font-size: 14px;
@@ -492,6 +495,9 @@ footer {
     width: 70%;
     height: 250px;
     margin: 5%;
+  }
+  .tdtitulo {
+    font-size: 18px;
   }
 }
 
