--- a/_contacto.scss
+++ b/_contacto.scss
@@ -11,7 +11,7 @@
                 'gmensaje gmapa'
                 'gfooter gfooter';
     grid-template-columns: 50% 50%;
-    grid-template-rows:50% 51% 25px;
+    grid-template-rows:50% 51% auto;
 }
 
 .c3
@@ -104,7 +104,7 @@
     width: 50%;
     text-align: left;
     font-weight: bolder;
-    font-size: 22px;  
+    font-size: 20px;  
     padding: 0px;
   
 }
@@ -114,7 +114,7 @@
     text-align: right;
     font-style: italic;
     font-size: 18px;   
-    padding: 0px;
+    padding: 2px;
 }
 
 .gacontacto
