--- a/_variables.scss
+++ b/_variables.scss
@@ -5,3 +5,4 @@ $colorbarrahover:rgba(160, 16, 165, 0.678);
 $colorfondo2: white;
 $fuenteprincipal:sans-serif;
 $colorfondobody: linear-gradient(90deg,  rgb(239, 182, 200, 0.6) 0%, rgba(255,255,255) 8%, rgba(255,255,255) 92%,  rgb(239, 182, 200, 0.6) 100%);
+$colorfondobody1: linear-gradient(90deg,  rgb(255, 255, 255) 0%, rgb(239, 182, 200) 8%, rgb(239, 182, 200) 92%,  rgb(255, 255, 255) 100%);
