--- a/style.css
+++ b/style.css
@@ -1,247 +1,504 @@
-*   
-{    
-    padding: 0;
-    margin: 0;
+@charset "UTF-8";
+h2 {
+  color: rgb(107, 42, 163);
+  font-family: sans-serif;
+  font-weight: bolder;
+  font-size: 35px;
+  padding: 10px;
+  text-align: center;
+  background-color: rgb(239, 182, 200);
 }
 
-body{
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(240,251,251,1) 24%, rgba(228,248,248,1) 29%, rgba(219,246,246,1) 50%, rgba(143,168,172,1) 71%, rgba(5,25,35,1) 100%);
-    font-family: 'Times New Roman', Times, serif;
+.ofertas {
+  text-align: center;
 }
 
-.head{
-    text-align: center;
+.imgofertas {
+  width: 80%;
 }
 
-.logo{
-    width:100px;
-    height: px;
-    margin: 0   auto;
+.flexformat {
+  width: 80%;
+  margin: 0 auto;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-nav{   
-    overflow: hidden;
-    width: 100%;
-    text-align: center;
+.marcas {
+  background-color: white;
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  align-content: center;
 }
 
-nav ul{
-    list-style: none;    
-    display: inline-block;
+.imgmarcas {
+  height: 60%;
+  width: 60%;
+  border: rgb(107, 42, 163) solid 1, 5px;
 }
 
-nav ul li
-{
-    float: left;
-    padding-left: 300px;
-    padding-right: 300px;
+.imgmarcas:hover {
+  transform: translateY(-5px);
+  transform: scale(1.2);
+  transition-duration: 0.5s;
 }
 
-nav ul li a
-{
-    text-decoration: none;
-    color: #051923;
-    font-size: 20px;
-    font-weight: bold;
+.format {
+  text-align: center;
+  padding-top: 10px;
 }
 
-a:hover{
-    font-weight: bold;
-    color:#4982a3 ;
-}
-.cuerpo{
-    padding-top: 30px;
-    padding-bottom: 25px;
+.imgpagos {
+  width: 85%;
+  height: auto;
+  padding: 10px 0 25px 0;
+  margin-top: 15px;
 }
 
-h1{
-    text-align: center;
-    font-size: 25px;
+/**grids CONTACTO**/
+.gridcontacto {
+  display: grid;
+  width: 100%;
+  height: 80%;
+  margin: 0 auto;
+  grid-template-areas: "gmensaje gdatos" "gmensaje gmapa" "gfooter gfooter";
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 51% auto;
 }
 
-h2{
-    text-align: center;
-    font-size: 16px;
+.c3 {
+  grid-area: gmensaje;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-
-form{
-    padding-top: 30px;
-    text-align: center;
+.c4 {
+  grid-area: gdatos;
+  width: 100%;
+  height: 100%;
 }
 
-label{
-    font-size: 20px;
+.c5 {
+  grid-area: gmapa;
+  width: 100%;
+  height: 100%;
 }
 
-dd{
-    font-size: 18px;
+.c6 {
+  grid-area: gfooter;
+  padding: 5px;
+  background-color: rgb(239, 182, 200);
+  color: rgb(107, 42, 163);
+  font-size: 15px;
+  font-style: italic;
+  font-family: sans-serif;
+  text-align: center;
 }
 
-input{
-    background-color: #efefd0;
-    color: #051923;
-    margin: 10px;
-    padding: 5px;
-    font-size: 18px;
-    text-align: center;
-    box-shadow: 0px 0px 10px #efefd0;
-    border: none;
-    font-family: 'Times New Roman', Times, serif;
+.gmensajecontacto {
+  margin-left: 20%;
+  margin-top: 5%;
 }
 
-button{
-    border-radius: 200px;
-    border: none;
-    width: 150px;
-    font-size: 25px;
-    padding: 5px 15px 5px 15px;
-    background-color: #051923;
-    color: #72e0b8;
-    box-shadow: 0px 0px 10px #051923;
-    font-family: 'Times New Roman', Times, serif;
+.gmsj {
+  width: 85%;
+  height: 6%;
+  border: rgb(107, 42, 163) 2px solid;
+  font-family: sans-serif;
+  font-style: italic;
+  font-size: 20px;
+  border-radius: 10px;
 }
 
-button:active {
-    background-color: #72e0b8;
-    box-shadow: 0px 0px 10px #72e0b8;
-    color: #051923;
+.gmsj1 {
+  width: 85%;
+  height: 50%;
+  border: rgb(107, 42, 163) 2px solid;
+  font-family: sans-serif;
+  font-style: italic;
+  font-size: 20px;
+  border-radius: 10px;
 }
 
-.datosfinales{
-    padding: 20px;
-    width: 60%;
-    background-color: #051923;
-    margin: 20px auto 20px auto;
-    border-radius: 50px;
-    border: none;
-    box-shadow: 0px 0px 30px  #72e0b8;
-    color:  #efefd0;
+.gboton {
+  color: rgb(107, 42, 163);
+  background-color: rgba(137, 43, 226, 0.199);
+  border-radius: 5px;
+  font-size: 20px;
+  width: 120px;
 }
 
-.h22{
-    text-align: center;
-    font-size: 30px;
-    color: #72e0b8;
+.gtablacontacto {
+  border: rgb(107, 42, 163) 2px solid;
+  border-radius: 10px;
+  width: 70%;
+  height: 70%;
+  background-color: white;
+  color: rgb(107, 42, 163);
+  font-family: sans-serif;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-left: 10%;
+  margin-top: 5%;
 }
 
-.h33{
-    color: #72e0b8;
+.gtipocontacto {
+  width: 50%;
+  text-align: left;
+  font-weight: bolder;
+  font-size: 20px;
+  padding: 0px;
 }
 
-.pdatos{
-    margin-top: 20px;
-    margin-left: 10%;
-    text-align: left;
-    color: #efefd0;
+.gcontacto {
+  width: 100%;
+  text-align: right;
+  font-style: italic;
+  font-size: 18px;
+  padding: 2px;
 }
 
-footer{
-    width: 100%;
-    height:65px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: nowrap;
-    font-weight: bold;
-    background-color: #051923;
-    color:  #efefd0;
+.gacontacto {
+  text-decoration: none;
+  color: rgb(107, 42, 163);
 }
 
-.foot{
-    align-content: center;
-    margin: 5px;
-    text-align: center;
-    font-size: 18px;
+.gmapa {
+  border: rgb(107, 42, 163) 2px solid;
+  margin-left: 10%;
+  width: 70%;
+  height: 80%;
+  border-radius: 10px;
 }
 
-.gacontacto{
-    text-decoration: none;
-    color: #72e0b8;
-    font-size: 14px;
+.tablaprecios {
+  border-collapse: separate;
+  border-spacing: 10px 0px;
+  font-size: 18px;
+  color: rgb(107, 42, 163);
+  font-family: sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
 }
 
-.historia{
-    margin: 30px;
-    width: 85%;
-    margin: 20px auto 20px auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.tdtitulo {
+  font-weight: bolder;
+  font-size: 20px;
+  text-align: center;
 }
 
-h4{
-    margin-top: 20px;
-    font-size: 22px;
+td {
+  width: 300px;
+  font-size: 16px;
+  text-align: center;
+  padding: 10px;
 }
 
-.texto{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-wrap: nowrap;
-    text-align: left;
-    margin-left: 25px;
-    text-shadow: 0px 0px 10px  rgba(219,246,246,1);
+tr {
+  border: rgb(107, 42, 163) solid;
 }
 
-.oficina{
-    width: 45%;
-    height: 40%;
-    margin: auto auto auto auto;
-    box-shadow: 0px 0px 30px  #05668d;
+/**header FLEXBOX INDEX**/
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.consulta{
-    margin: 10px auto 25px auto;
-    color:  #efefd0;
-    text-shadow: 0px 0px 10px  #72e0b8;;
+body {
+  background: linear-gradient(90deg, rgba(239, 182, 200, 0.6) 0%, rgb(255, 255, 255) 8%, rgb(255, 255, 255) 92%, rgba(239, 182, 200, 0.6) 100%);
+  height: auto;
 }
 
+.mensaje {
+  background-color: rgb(239, 182, 200);
+  text-align: left;
+  margin: 0 auto;
+  width: 80%;
+  overflow: hidden;
+  white-space: nowrap;
+}
 
+.msj {
+  color: white;
+  font-style: italic;
+  font-size: 18px;
+  font-family: sans-serif;
+  animation: movtext 20s linear infinite; /*animación*/
+}
+
+/*animación*/
+@keyframes movtext {
+  from {
+    transform: translateX(100%); /* Comienza desde la derecha */
+  }
+  to {
+    transform: translateX(-95%); /* Termina en la izquierda */
+  }
+}
+header {
+  background-color: rgb(239, 182, 200);
+  overflow: hidden;
+  width: 100%;
+  height: auto;
+}
+
+.flexheader {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.header {
+  width: 20%;
+  text-align: left;
+}
+
+.logo {
+  width: 150px;
+  height: 135px;
+  margin-right: 20px;
+}
+
+.barra {
+  align-content: center;
+  width: 40%;
+  text-align: right;
+}
+
+nav {
+  overflow: hidden;
+  width: 100%;
+  text-align: right;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav ul li {
+  overflow: hidden;
+  float: right;
+  margin-left: 40px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  font-size: 22px;
+  color: rgb(107, 42, 163);
+  font-family: sans-serif;
+}
+
+a:hover {
+  font-weight: bold;
+  color: rgba(160, 16, 165, 0.678);
+}
+
+.buscar {
+  width: 20%;
+  text-align: right;
+  align-content: center;
+}
+
+.barrabusqueda {
+  border: rgb(107, 42, 163) hidden;
+  border-radius: 20px 20px 20px 20px;
+  font-family: sans-serif;
+  background-color: white;
+  font-size: 18px;
+  width: 90%;
+  padding: 2px;
+}
+
+footer {
+  padding: 5px;
+  background-color: rgb(239, 182, 200);
+  color: rgb(107, 42, 163);
+  font-size: 15px;
+  font-style: italic;
+  font-family: sans-serif;
+  text-align: center;
+}
 
 /**Media queris**/
-@media (min-width: 0px) and (max-width:1300px)
-{
-
-    nav ul li
-    {
-        float: left;
-        padding-left: 60px;
-        padding-right: 60px;
+@media (min-width: 0px) and (max-width: 1070px) {
+  .mensaje {
+    width: 100%;
+  }
+  .msj {
+    font-size: 12px;
+    animation: movtext 15s linear infinite; /*animación*/
+  }
+  @keyframes movtext {
+    from {
+      transform: translateX(100%); /* Comienza desde la derecha */
     }
-
-    .historia{
-        width: 90%;
-        margin: 20px auto 20px auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-
+    to {
+      transform: translateX(-130%); /* Termina en la izquierda */
     }
-    .texto{
-        width: 90%;   
-        text-align: justify;
-    }
-    
-    .oficina{
-        width: 80%;
-        margin: auto auto 10px auto;
-    }
-
-    footer{
-        height:auto;
-        flex-direction: row;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
-    
-    .foot{
-        width: 45%;
-        text-align: center;
-        font-size: 16px;
-    }
-    
+  }
+  header {
+    height: auto;
+  }
+  .flexheader {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 80%;
+    margin: 0 auto;
+  }
+  .header {
+    width: 110px;
+    height: 95px;
+    text-align: center;
+    margin: 0 auto;
+    align-content: center;
+  }
+  .logo {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    align-content: center;
+  }
+  .logo:hover {
+    width: 110px;
+    height: 95px;
+  }
+  .barra {
+    width: 80%;
+    margin: 0 auto;
+  }
+  nav {
+    width: 100%;
+  }
+  nav ul li {
+    overflow: hidden;
+    float: right;
+    margin-left: 5%;
+    margin-right: 10%;
+  }
+  nav ul li a {
+    font-size: 14px;
+    text-align: right;
+    margin: 0px;
+  }
+  .buscar {
+    width: 70%;
+    padding: 10px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .barrabusqueda {
+    font-size: 12px;
+    width: 100%;
+    height: 25px;
+    text-align: left;
+  }
+  h2 {
+    font-size: 20px;
+    padding: 10px;
+  }
+  .imgofertas {
+    width: 100%;
+  }
+  .marcas {
+    width: 105px;
+    height: 105px;
+    margin: 0 auto;
+  }
+  .imgmarcas {
+    height: 80%;
+    width: 80%;
+    padding: 5%;
+  }
+  footer {
+    padding: 3px;
+    font-size: 12px;
+  }
+  .gridcontacto {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    grid-template-areas: "gmensaje" "gdatos" "gmapa" "gfooter";
+    grid-template-columns: 100%;
+    grid-template-rows: 50% auto auto 20px;
+  }
+  .c3 {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+  .c5 {
+    text-align: center;
+  }
+  .c6 {
+    font-size: 12px;
+  }
+  .gmensajecontacto {
+    margin-left: 0%;
+  }
+  .gmsj {
+    width: 70%;
+    height: 6%;
+    border: rgb(107, 42, 163) 2px solid;
+    font-family: sans-serif;
+    font-style: italic;
+    font-size: 16px;
+    border-radius: 10px;
+  }
+  .gmsj1 {
+    width: 70%;
+    height: 150px;
+    border: rgb(107, 42, 163) 2px solid;
+    font-family: sans-serif;
+    font-style: italic;
+    font-size: 16px;
+    border-radius: 10px;
+  }
+  .gboton {
+    color: rgb(107, 42, 163);
+    background-color: rgba(137, 43, 226, 0.329);
+    border-radius: 5px;
+    font-size: 14px;
+    width: 75px;
+  }
+  .gtablacontacto {
+    border: rgb(107, 42, 163) 2px solid;
+    border-radius: 10px;
+    width: 70%;
+    height: 50%;
+    background-color: white;
+    color: rgb(107, 42, 163);
+    font-family: sans-serif;
+    padding: 5px;
+    margin: 0 auto;
+    margin-top: 5px;
+  }
+  .gtipocontacto {
+    font-size: 14px;
+    text-align: center;
+  }
+  .gcontacto {
+    font-size: 12px;
+    text-align: center;
+  }
+  .gmapa {
+    margin: 0 auto;
+    width: 70%;
+    height: 250px;
+    margin: 5%;
+  }
+  .tdtitulo {
+    font-size: 18px;
+  }
 }
 
+/*# sourceMappingURL=style.css.map */
